fix: resolve all SonarQube code smells - Remove 'ApiResponses' wrapper annotations in ExamController (use multiple @ApiResponse) - Replace Stream.collect(Collectors.toList()) with Stream.toList() in ExamService - Define constant EXAM_NOT_FOUND_MESSAGE for duplicated literal string - Rename User.username field to User.displayUsername to avoid confusion with getUsername() - Update UserRepository.existsByUsername to existsByDisplayUsername - Remove unused import 'org.springframework.data.mongodb.repository.Query' in ExamRepository - Remove unused imports 'java.util.Arrays', 'java.util.HashMap', 'java.util.Map' in ExamTest - Remove unused private fields 'professor', 'student', 'updateExamRequest' in ExamControllerTest - Remove unused import 'org.mockito.ArgumentMatchers.anyString' in ExamServiceTest - Remove unused imports 'Role', 'User' in ExamControllerTest